--- a/frontend/src/components/AuthHeader/AuthHeader.css
+++ b/frontend/src/components/AuthHeader/AuthHeader.css
@@ -3,5 +3,35 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    padding: 48px 0px 40px;
+    position: relative;
+    width: 100%;
+}
+
+.auth-header-logo {
+    width: 102px;
+    height: 26px;
+}
+
+/* AuthHeader Signup */
+.auth-header-signup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 13px;
+    font-weight: 400;
+    color: var(--brand-core-gray);
+    position: absolute;
+    right: 40px;
+    gap: 5px;
+}
+
+.auth-header-signup-link {
+    color: #1264A3;
+    font-weight: 700;
+}
+
+.auth-header-signup-link:visited {
+    color: #1264A3;
 }
