--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Lato", sans-serif;
+    text-decoration: none;
 }
 
 #root {
     width: 100%;
     min-height: 100vh;
+    --brand-core-aubergine: #5C2C5D;
+    --brand-core-white : #fff;
+    --brand-core-border: #5e5d6073;
+    --brand-core-gray: #616061;
 }
