--- a/frontend/src/pages/LoginScreen/LoginScreen.css
+++ b/frontend/src/pages/LoginScreen/LoginScreen.css
@@ -1,5 +1,6 @@
 .login-screen {
     height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
