--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     font-family: "Lato", sans-serif;
+    color: var(--brand-core-black);
     text-decoration: none;
 }
 
@@ -15,4 +16,5 @@
     --brand-core-white : #fff;
     --brand-core-border: #5e5d6073;
     --brand-core-gray: #616061;
+    --brand-core-black: #1D1C1D;
 }
