--- a/frontend/src/pages/Workspace/Workspace.css
+++ b/frontend/src/pages/Workspace/Workspace.css
@@ -1,4 +1,13 @@
 .workspace {
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.workspace-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
