--- a/frontend/src/pages/Workspace/Workspace.css
+++ b/frontend/src/pages/Workspace/Workspace.css
@@ -11,3 +11,118 @@
     width: 100%;
     height: 100%;
 }
+
+/* Sidebar */
+.workspace-sidebar {
+    height: 100%;
+    background-color: rebeccapurple;
+    width: 300px;
+    padding: 8px;
+}
+
+/* Sidebar Header */
+.workspace-sidebar-header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+}
+
+/* Sidebar Body */
+.workspace-sidebar-actions {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+}
+
+.workspace-sidebar-action {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.workspace-sidebar-action-icon {
+    transform: scaleX(-1);
+}
+
+/* Sidebar Channels */
+.workspace-sidebar-channels-list {
+    width: 100%;
+}
+
+.dropdown-menu-button {
+    width: 100%;
+}
+
+.dropdown-menu {
+    width: 100%;
+}
+
+
+
+/* Dropdown */
+.workspace-sidebar-channels-list {
+    width: 100%;
+    background-color: brown;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between
+}
+
+/* Dropdown Button */
+.dropdown-menu-button {
+    display: flex;
+    flex-direction: row;
+}
+
+
+/* Message Area */
+.workspace-message-area {
+    height: 100%;
+    width: 100%;
+    background-color: tomato;
+    display: flex;
+    flex-direction: column;
+}
+
+.workspace-message-area-header {
+    width: 100%;
+    display: flex;
+    flex-direction: column
+}
+
+.workspace-message-area-header-channel {
+    width: 100%;
+    height: 49px;
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.workspace-message-area-header-actions {
+    width: 100%;
+    height: 38px;
+    background-color: yellowgreen;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+}
+
+.workspace-message-area-message-list {
+    width: 100%;
+    height: 100%;
+}
+
+.workspace-message-area-message-input {
+    width: 100%;
+    height: 120px;
+}
