--- a/frontend/src/components/DropdownItem/DropdownItem.css
+++ b/frontend/src/components/DropdownItem/DropdownItem.css
@@ -3,4 +3,19 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    gap: 8px;
+}
+
+.dropdown-menu-list-item-icon {
+    width: 20px;
+    height: 20px;
+    font-size: 16px;
+}
+
+.dropdown-menu-list-item-name {
+    font-size: 15px;
+    font-weight: 600;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
