--- a/frontend/src/pages/Workspace/Workspace.css
+++ b/frontend/src/pages/Workspace/Workspace.css
@@ -17,7 +17,10 @@
     height: 100%;
     background-color: rebeccapurple;
     width: 300px;
-    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 0px 12px;
 }
 
 /* Sidebar Header */
@@ -27,7 +30,24 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    padding: 0px 8px 0px 12px;
+    gap: 8px;
+}
+
+.workspace-sidebar-header-name {
+    width: 150px;
+    font-size: 24px;
+    font-weight: 600;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 3px 8px;
+}
+
+.workspace-sidebar-header-icon {
+    width: 20px;
+    height: 20px;
+    font-size: 16px;
 }
 
 /* Sidebar Body */
@@ -35,40 +55,81 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: aliceblue;
+    gap: 4px;
+    padding: 0px 8px 0px 12px;
 }
 
 .workspace-sidebar-action {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    gap: 8px;
 }
 
 .workspace-sidebar-action-icon {
     transform: scaleX(-1);
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+}
+
+.workspace-sidebar-action-text {
+    font-size: 16px;
+    font-weight: 600;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 /* Sidebar Channels */
 .workspace-sidebar-channels-list {
     width: 100%;
+    padding: 0px 8px 0px 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
 
 .dropdown-menu-button {
-    width: 100%;
+    align-self: flex-start;
+    width: fit-content;
+    padding: 2px 4px;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
 }
 
+.dropdown-menu-button-icon {
+    width: 20px;
+    height: 20px;
+    font-size: 16px;
+}
+
+.dropdown-menu-button-text {
+    font-size: 15px;
+    font-weight: 600;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+
+}
+
+/* Dropdown Menu */
 .dropdown-menu {
     width: 100%;
 }
 
-
-
 /* Dropdown */
 .workspace-sidebar-channels-list {
     width: 100%;
-    background-color: brown;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,48 +142,9 @@
     flex-direction: row;
 }
 
-
-/* Message Area */
-.workspace-message-area {
-    height: 100%;
+.dropdown-menu-list {
     width: 100%;
-    background-color: tomato;
     display: flex;
     flex-direction: column;
-}
-
-.workspace-message-area-header {
-    width: 100%;
-    display: flex;
-    flex-direction: column
-}
-
-.workspace-message-area-header-channel {
-    width: 100%;
-    height: 49px;
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.workspace-message-area-header-actions {
-    width: 100%;
-    height: 38px;
-    background-color: yellowgreen;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 8px;
-}
-
-.workspace-message-area-message-list {
-    width: 100%;
-    height: 100%;
-}
-
-.workspace-message-area-message-input {
-    width: 100%;
-    height: 120px;
+    gap: 2px;
 }
