--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,4 +17,6 @@
     --brand-core-border: #5e5d6073;
     --brand-core-gray: #616061;
     --brand-core-black: #1D1C1D;
+    --brand-core-beige:#F9F6F1;
+    --brand-core-light-gray:#5e5d6073;
 }
