--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 20px 0px;
 }
 
 .navbar-icons {
