--- a/frontend/src/components/Toolbar/Toolbar.css
+++ b/frontend/src/components/Toolbar/Toolbar.css
@@ -1,6 +1,6 @@
 .toolbar {
     width: 100%;
-    height: 40px;
+    height: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -16,11 +16,13 @@
     width: 30%;
     gap: 10px;
     padding-right: 10px;
+    
 }
 
 .toolbar-arrows svg {
     cursor: pointer;
-    font-size: 20px;
+    font-size: 16px;
+    fill: var(--brand-core-white);
 }
 
 
@@ -36,11 +38,26 @@
 
 .toolbar-search-input {
     width: 100%;
+    border-radius: 6px;
+    padding: 5px;
+    background-color: var(--brand-core-light-aubergine);
+    color: var(--brand-core-white);
+    font-weight: 600;
+    border: none;
+}
+
+.toolbar-search-input::placeholder {
+    color: var(--brand-core-lighter-aubergine);
+}
+
+.toolbar-search-input:focus {
+    outline: none;
 }
 
 .toolbar-search-icon {
     position: absolute;
     right: 10px;
+    fill: var(--brand-core-lighter-aubergine);
 }
 
 /* Toolbar Help */
@@ -50,9 +67,11 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+    padding-right: 20px;
 }
 
 .toolbar-help svg {
     cursor: pointer;
     font-size: 20px;
+    fill: var(--brand-core-white);
 }
