--- a/frontend/src/components/Channel/Channel.css
+++ b/frontend/src/components/Channel/Channel.css
@@ -3,7 +3,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 0px 12px 0px 20px;
     background-color: var(--brand-core-dark-gray);
 }
 
@@ -13,6 +12,7 @@
     flex-direction: column;
     border-bottom: 1px solid black;
     border-bottom: 1px solid var(--brand-core-border);
+    padding: 0px 20px;
 }
 
 .workspace-message-area-header-channel-name {
@@ -54,6 +54,6 @@
     flex: 1;
     height: 100%;
     overflow-y: auto;
-    padding: 0px 12px 0px 20px;
-    color: var(--brand-core-white);
+    display: flex;
+    flex-direction: column;
 }
