--- a/frontend/src/pages/CreateWorkspace/CreateWorkspace.css
+++ b/frontend/src/pages/CreateWorkspace/CreateWorkspace.css
@@ -60,7 +60,7 @@
     padding: 8px 16px;
     border-radius: 8px;
     border: none;
-    background-color: var(--brand-core-gray);
+    background-color: var(--brand-core-aubergine);
     font-weight: 800;
     color: var(--brand-core-lighter-gray);
 }
