CSS-Boxes-Fixed

--- a/frontend/src/components/Channel/Channel.css
+++ b/frontend/src/components/Channel/Channel.css
@@ -1,6 +1,6 @@
 .workspace-message-area {
-    height: 100%;
     width: 100%;
+    height: 100%;;
     display: flex;
     flex-direction: column;
     background-color: var(--brand-core-dark-gray);
