--- a/frontend/src/components/MessageList/MessageList.css
+++ b/frontend/src/components/MessageList/MessageList.css
@@ -1,9 +1,9 @@
 .workspace-message-area-message-list {
-    flex: 1;
+    width: 100%;
     height: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 10px 20px;
+    padding: 10px 0px;
 }
