--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,9 +9,25 @@
     text-decoration: none;
 }
 
-#root {
+body {
+    height: 100dvh;
+    max-height: 100dvh;
     width: 100%;
-    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#root {
+    width: 100dvw;
+    height: 100dvh;
+    max-width: 100dvw;
+    max-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    justify-content: center;
     --brand-core-aubergine: #431349;
     --brand-core-dark-aubergine: #221226;
     --brand-core-light-aubergine: #7D3986;
