--- a/frontend/src/components/AuthFooter/AuthFooter.css
+++ b/frontend/src/components/AuthFooter/AuthFooter.css
@@ -4,9 +4,11 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
-    padding: 32px;
+    /* padding: 32px; */
     font-size: 15px;
     color: var(--brand-core-gray);
+    width: 100%;
+    height: 64px;
 }
 
 .auth-footer-region {
