--- a/frontend/src/pages/Workspace/Workspace.css
+++ b/frontend/src/pages/Workspace/Workspace.css
@@ -1,3 +1,9 @@
+.channel-not-selected {
+    width: 100%;
+    height: 100%;
+    background-color: var(--brand-core-dark-gray);
+}
+
 .workspace {
     width: 100%;
     height: 100%;
@@ -90,15 +96,6 @@
     color: var(--brand-core-lighter-aubergine);
 }
 
-/* Sidebar Channels */
-.workspace-sidebar-channels-list {
-    width: 100%;
-    padding: 0px 8px 0px 12px;
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-}
-
 .dropdown-menu-button {
     align-self: flex-start;
     width: fit-content;
@@ -141,14 +138,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    padding: 0px 8px 0px 12px;
+    gap: 4px;
+    overflow-y: auto;
+    /* scrollbar */
 }
 
 /* Dropdown Button */
-.dropdown-menu-button {
-    display: flex;
-    flex-direction: row;
-}
-
 .dropdown-menu-list {
     width: 100%;
     display: flex;
