--- a/frontend/src/components/Message/Message.css
+++ b/frontend/src/components/Message/Message.css
@@ -13,6 +13,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 
 .workspace-message-area-message-info-header {
