--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,4 +44,5 @@ body {
     --brand-core-pink: #3A1040;
     --brand-core-light-pink: #1F1023;
     --brand-core-lighter-input: #222529;
+    --brand-core-blue: #1264a3;
 }
