--- a/frontend/src/components/MessageList/MessageList.css
+++ b/frontend/src/components/MessageList/MessageList.css
@@ -7,3 +7,16 @@
     justify-content: flex-start;
     padding: 10px 0px;
 }
+
+.workspace-message-area-message-list::-webkit-scrollbar {
+    background: transparent;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    border: 1px solid var(--brand-core-border);
+}
+
+.workspace-message-area-message-list::-webkit-scrollbar-thumb {
+    background: var(--brand-core-border);
+    border-radius: 4px;
+}
