--- a/frontend/src/components/Channel/Channel.css
+++ b/frontend/src/components/Channel/Channel.css
@@ -1,6 +1,7 @@
 .workspace-message-area {
     width: 100%;
-    height: 100%;;
+    height: 100%;
+    ;
     display: flex;
     flex-direction: column;
     background-color: var(--brand-core-dark-gray);
@@ -34,8 +35,26 @@
     color: var(--brand-core-lighter-pink);
 }
 
+.workspace-message-area-header-actions-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.workspace-message-area-header-actions-button-icon {
+    fill: var(--brand-core-lighter-pink);
+    stroke: var(--brand-core-lighter-pink);
+    font-size: 16px;
+}
+
 .workspace-message-area-header-actions-button-text {
     color: var(--brand-core-lighter-pink);
+    font-size: 16px;
 }
 
 .workspace-message-area-header-actions {
