--- a/frontend/src/pages/Workspace/Workspace.css
+++ b/frontend/src/pages/Workspace/Workspace.css
@@ -1,3 +1,13 @@
+.workspace-loader {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--brand-core-dark-aubergine);
+}
+
 .channel-not-selected {
     width: 100%;
     height: 100%;
