--- a/frontend/src/components/CreateChannelModal/CreateChannelModal.css
+++ b/frontend/src/components/CreateChannelModal/CreateChannelModal.css
@@ -11,7 +11,121 @@
 }
 
 .modal-content {
-    height: 400px;
-    width: 600px;
-    background-color: rebeccapurple;
+    height: 500px;
+    width: 800px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+}
+
+.create-channel-modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 100%;
+    width: 40%;
+    padding: 12px 20px;
+    background-color: var(--brand-core-dark-gray);
+    gap: 20px;
+    border-radius: 12px 0px 0px 12px;
+}
+
+.create-channel-modal__title {
+    color: var(--brand-core-white);
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.create-channel-form {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    position: relative;
+}
+
+.create-channel-form__label {
+    color: var(--brand-core-white);
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.create-channel-form__input {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    color: var(--brand-core-white);
+    background-color: var(--brand-core-lighter-input);
+}
+
+.create-channel-form__submit{
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    color: var(--brand-core-white);
+    background-color: var(--brand-core-lighter-input);
+    cursor: pointer;
+    position: absolute;
+    bottom: 0px;
+}
+
+.minislack {
+    height: 100%;
+    width: 60%;
+    padding: 12px 20px;
+    background-color: var(--brand-core-aubergine);
+    border-radius: 0px 12px 12px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    position: relative;
+}
+
+.minislack__header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.minislack__close-btn {
+    cursor: pointer;
+    font-size: 16px;
+    background-color: transparent;
+    border: none;
+    color: var(--brand-core-white);
+    position: absolute;
+    top: 12px;
+    right: 20px;
+    
+}
+
+.minislack__content {
+    background-color: var(--brand-core-dark-gray);
+    border: 2px solid var(--brand-core-border);
+    width: 100%;
+    height: 80%;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+.minislack__channel-name {
+    color: var(--brand-core-white);
+    font-size: 18px;
+    font-weight: 600;
 }
