--- a/frontend/src/components/MessageInput/MessageInput.css
+++ b/frontend/src/components/MessageInput/MessageInput.css
@@ -1,7 +1,7 @@
 .workspace-message-area-message-input-form {
     display: flex;
     flex-direction: column;
-    position: relative;
+    /* position: relative; */
     padding: 0px 20px 10px 20px;
     background-color: var(--brand-core-dark-gray);
 }
