--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,6 +36,7 @@ body {
     --brand-core-white: #fff;
     --brand-core-border: #5e5d6073;
     --brand-core-black: #1D1C1D;
+    --brand-core-lighter-black: #27272A;
     --brand-core-beige: #F9F6F1;
     --brand-core-gray: #616061;
     --brand-core-light-gray: #5e5d6073;
