--- a/frontend/src/components/Message/Message.css
+++ b/frontend/src/components/Message/Message.css
@@ -3,10 +3,25 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: center;
     gap: 12px;
     padding: 20px 20px;
     border-bottom: 1px solid var(--brand-core-border);
     border-top: 1px solid var(--brand-core-border);
+}
+
+.workspace-message-area-message-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+}
+
+.workspace-message-area-message-avatar .workspace-message-area-message-avatar-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .workspace-message-area-message-info {
